# CRootBox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DumuxRootSystem.cpp  DumuxRootSystem.h  LICENSE.md  Mai2019_riceNERICA4_NoP_DryingV5.py  Mai2019_riceNERICA4_NoP_FCV5.py  Mai2019_riceNERICA4_PlusP_DryingV4.py  Mai2019_riceNERICA4_PlusP_FCV5.py  Mai2019_riceNERICA4_SubP_DryingV5.py  Mai2019_riceNERICA4_SubP_FCV4.py  Makefile  ModelParameter.cpp  ModelParameter.h  PythonRootSystem.cpp  README.md  Readme.odt  Root.cpp  Root.h  RootSystem.cpp  RootSystem.h  Soil3_example.py  analysis.cpp  analysis.cpp~  analysis.h  analysis.h~  benchmark.py  benchmark2.py  benchmark_state.py  example1.py  example1a.py  example1b.py  example2.py  example2a.py  example2b.py  example3.py  example3a.py  example3b.py  example3c.py  (+38 more)
DistMesh/: array2ug.py  b1_ug.msh  b1_ug2.msh  b2_ug.msh  b2_ug2.msh  boxN.py  example2d.py  example3d.py  test.msh  ug_example.py  visualize_ug.py  vtk_tools.py
Schnepfetal_2018_AnnBot/: readme.txt
Schnepfetal_2018_VZJ/: Analysis.ipynb  readme.txt  root_data.h5
docs/: index.html
examples/: Makefile  Zea_mays_1_Leitner_2010.vtp  benchmarks.h  example1.h  example1_wb.h  example1_wb_dgf.h  example2.h  example3.h  example3b.h  example3c.h  example4.h  example5.h  example_dumux.h  example_exudation.h  example_volume.h  exudation.h  main.cpp  shehan_RhizoTubes.h  shehan_ScaleElongation.h  shehan_ScaleElongation_CL.h  shehan_SoilCore.h  shehan_Trenches.h  shehan_WC.h  test_crootbox
modelparameter/: Anagallis_straight.rparam~  BrassicaNapus_a_Leitner_et_al_2010.rparam  BrassicaNapus_b_Leitner_et_al_2010.rparam  Brassica_oleracea_Vansteenkiste_2014.rparam  Cauliflower_Vansteenkiste_et_al_2014.pparam  Cauliflower_Vansteenkiste_et_al_2014.rparam  CrypsisAculeata_Clausnitzer_Hopmans_1994.pparam  CrypsisAculeata_Clausnitzer_Hopmans_1994.rparam  Crypsis_aculeata_Clausnitzer_1994.rparam  Helianthus_Pages_et_al_2013.pparam  Helianthus_Pages_et_al_2013.rparam  Heliantus_Pagès_2013.rparam  JuncusSquarrosus_Clausnitzer_Hopmans_1994.pparam  JuncusSquarrosus_Clausnitzer_Hopmans_1994.rparam  LupinusAngustifolius_Chen_et_al_2011.rparam  Maize_Pheno1_Leitner_et_al_2014.rparam  Maize_Pheno2_Leitner_et_al_2014.rparam  Maize_Pheno3_Leitner_et_al_2014.pparam  Maize_Pheno3_Leitner_et_al_2014.rparam  Medicago_Schnepf_et_al_2016.rparam  (+34 more)
(+169 files in other folders)
